# biomarker-normalization-toolkit

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  GOVERNANCE.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  biomarker_api_research_2026-04-06.md  pyproject.toml  requirements-verification.txt  route_decision_2026-04-06.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  build_workflow.md  canonical_row_schema.md  compliance-guide.md  evidence.md  external-datasets.md  gold_dataset_plan.md  initial_build_decisions.md  openapi.json  oss-cutover.md  platform_scope.md  release_readiness.md  releasing.md  roadmap.md  validation.md
examples/: README.md
examples/custom_aliases/: custom_aliases.json  use_custom_aliases.py
examples/fhir_ingest/: normalize_bundle.py
examples/python_sdk/: basic_normalize.py
examples/rest_api/: curl_examples.md
fixtures/expected/: v0_sample_expected.json
fixtures/input/: coverage_wave_1.csv  coverage_wave_2.csv  coverage_wave_3.csv  v0_invalid_missing_headers.csv  v0_sample.csv  vendor_alias_edge_cases.csv
operating_system/: README.md  change_record_template.json  constraints.md  functional_test_matrix.md  multi_agent_consensus.md  proposal_template.json  review_rubric.md  verification_gate.md
operating_system/examples/: customer_run_toolkit.json  dual_agent_consensus_config.json  ui_and_api_change.json
operating_system/tools/: claude_consensus_wrapper.py  codex_consensus_wrapper.py  consensus_wrapper_common.py  derive_verification_plan.py  dual_agent_consensus.py  evaluate_proposal.py  record_checkpoint.py  run_live_consensus_smoke_test.py  validate_fhir_bundle.py
project_memory/: README.md  checkpoint_template.json  current_context.md  manifest.json  roadmap.md  verification_record_template.md
project_memory/checkpoints/: 010_repo-setup-and-operating-system-install.md  020_canonical-schema-locked.md  030_gold-dataset-seeded.md  040_mapping-registry-implemented.md  050_unit-conversion-registry-implemented.md  060_normalization-pipeline-implemented.md  070_cli-and-outputs-verified.md  080_fhir-export-implemented.md  090_demo-and-packaging-proven.md  100_release-readiness-decision-recorded.md  110_coverage-expansion-wave-1.md  120_vendor-alias-and-edge-case-wave.md  130_external-fhir-validation-integrated.md  140_coverage-expansion-waves-2-6-and-fhir-ingest.md  150_catalog-integrity-and-71-biomarker-hardening.md  160_dual-agent-consensus-orchestration.md  170_live-cli-wrappers-for-dual-agent-consensus.md  180_live-smoke-test-and-consensus-hardening.md
project_memory/entries/: 010_repo_setup.json  020_canonical_schema_locked.json  030_gold_dataset_seeded.json  040_mapping_registry_implemented.json  050_unit_conversion_registry_implemented.json  060_normalization_pipeline_implemented.json  070_cli_and_outputs_verified.json  080_fhir_export_implemented.json  090_demo_and_packaging_proven.json  100_release_readiness_decision.json  110_coverage_expansion_wave_1.json  120_vendor_alias_edge_cases_wave.json  130_external_fhir_validation_integrated.json  160_dual_agent_consensus_orchestration.json  (+10 more)
scripts/: check_distribution_contents.py  export_catalog_metadata.py  export_openapi.py  quality_audit.py  rate_api.py  scrutinize.py  smoke_installed_package.py
tests/: test_alias_and_microscopy_followup.py  test_alias_gap_followup.py  test_allergen_ige_followup.py  test_api.py  test_body_fluid_followup.py  test_catalog_gap_expansion.py  test_catalog_source_integrity.py  test_consensus_wrappers.py  test_dual_agent_consensus.py  test_ingest_and_unit_residue_followup.py  test_live_consensus_smoke_test.py  test_next_wave_specialty_followup.py  test_normalization.py  test_properties.py  test_safe_ambiguity_reduction.py  test_scope_expansion_followup.py  test_scope_expansion_next_wave.py  test_structured_loinc_and_specialty_followup.py  test_urinalysis_followup.py
(+42 files in other folders)
