[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biomarker-normalization-toolkit"
version = "0.2.1"
description = "Customer-run toolkit that normalizes messy lab data into canonical machine-readable output."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = ["defusedxml>=0.7"]

[project.optional-dependencies]
excel = ["openpyxl>=3.1"]
fuzzy = ["rapidfuzz>=3.0"]
fhir-validation = ["fhir.resources"]
rest = ["fastapi>=0.100", "uvicorn[standard]>=0.24", "pydantic>=2.0"]
all = ["openpyxl>=3.1", "rapidfuzz>=3.0", "fhir.resources", "fastapi>=0.100", "uvicorn[standard]>=0.24", "pydantic>=2.0"]

[project.scripts]
bnt = "biomarker_normalization_toolkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
biomarker_normalization_toolkit = ["data/*.csv"]
