[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biomarker-normalization-toolkit"
version = "0.3.0"
description = "Open-source toolkit that normalizes messy lab data into canonical machine-readable output."
readme = "README.md"
authors = [{ name = "cabibbz" }]
maintainers = [{ name = "cabibbz" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = ["defusedxml>=0.7"]
keywords = ["biomarkers", "lab-data", "fhir", "hl7", "loinc", "healthcare", "normalization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/cabibbz/biomarker-normalization-toolkit"
Repository = "https://github.com/cabibbz/biomarker-normalization-toolkit.git"
Issues = "https://github.com/cabibbz/biomarker-normalization-toolkit/issues"
Documentation = "https://github.com/cabibbz/biomarker-normalization-toolkit/tree/main/docs"
Changelog = "https://github.com/cabibbz/biomarker-normalization-toolkit/blob/main/CHANGELOG.md"

[project.optional-dependencies]
excel = ["openpyxl>=3.1"]
fuzzy = ["rapidfuzz>=3.0"]
fhir-validation = ["fhir.resources>=7.0"]
rest = ["fastapi>=0.100", "uvicorn[standard]>=0.24", "pydantic>=2.0", "python-multipart>=0.0.5"]
logging = ["python-json-logger>=2.0"]
dev = ["pytest>=7.0", "httpx>=0.24", "hypothesis>=6.0"]
all = ["openpyxl>=3.1", "rapidfuzz>=3.0", "fhir.resources>=7.0", "fastapi>=0.100", "uvicorn[standard]>=0.24", "pydantic>=2.0", "python-multipart>=0.0.5", "python-json-logger>=2.0"]

[project.scripts]
bnt = "biomarker_normalization_toolkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
biomarker_normalization_toolkit = ["data/*.csv"]
